@@ -4,6 +4,8 @@ Changelog for CinemaVision
 
 -change:   Now automatically updates content when the content path is changed
 -fix:      Now cleans items from the database that do not have the content path as their path prefix
+-fix:      Broken iTunes trailers causing error
+-fix:      Content scraper now recognizes files with capitalized extensions
 
 [- 1.0.11 -]
 
